# TGame

./: .gitignore  CMakeLists.txt  LICENSE  TODO  main.cpp
src/: function.hpp  math.hpp  structs.hpp
src/bullets/: bullet.cpp  bullet.hpp
src/enemies/: enemy.cpp  enemy.hpp
src/interfaces/: general_interfaces.cpp  general_interfaces.hpp
src/system/: AudioManager.cpp  AudioManager.hpp  BulletManager.cpp  BulletManager.hpp  CollisionMap.cpp  CollisionMap.hpp  CrossHair.cpp  CrossHair.hpp  Cursor.cpp  Cursor.hpp  EnemyManager.cpp  EnemyManager.hpp  Player.cpp  Player.hpp  ResourceManager.cpp  ResourceManager.hpp
